[project]
name = "agents-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.18.0",
    "langchain>=1.3.7",
    "langchain-agent>=0.1.1",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
]
